--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "safeclient",
   "version": "0.1.0",
   "description": "SAFE network JS client",
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "author": "Chad Retz <chad.retz@gmail.com>",
   "license": "MIT",
   "scripts": {
     "postinstall": "./node_modules/.bin/typings install",
     "compile": "./node_modules/.bin/tsc",
-    "compile-and-watch": "./node_modules/.bin/tsc --watch"
+    "compile-and-watch": "./node_modules/.bin/tsc --watch",
+    "integration-test": "./node_modules/.bin/mocha ./lib/integration"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "mocha": "^2.4.5",
     "typescript": "^1.8.7",
     "typings": "^0.7.8"
   },
