--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "preserveConstEnums": true,
     "declaration": true,
     "suppressImplicitAnyIndexErrors": true,
-    "outDir": "lib",
-    "rootDir": "src"
+    "outDir": "lib"
   },
   "exclude": [
       "examples",
